syntax = "proto3";

package users;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "internal/users/grpc/proto/annotations.proto";

option go_package = ".;pb";


service UsersService {
    // Local methods
    rpc Create (CreateUserRequest) returns (CreateUserResponse);
    rpc Login (LoginUserRequest) returns (LoginUserResponse);
    // Public methods
    rpc GetMe (google.protobuf.Empty) returns (GetMeUserResponse) {
        option (google.api.http) = {
            get: "/user"
        };
    };
    rpc GetOther (GetOtherUserRequest) returns (GetOtherUserResponse) {
        option (google.api.http) = {
            get: "/user/{nickname}"
        };
    };
    rpc Update (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            patch: "/user"
            body: "*"
        };
    };
    rpc Delete (DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
            delete: "/user"
        };
    };
}

message User {
    uint32 id = 1;
    string username = 2;
    string address = 3;
    google.protobuf.Timestamp regdate = 4;
}

// Create

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string address = 3;
}

message CreateUserResponse {
    User user = 1;
}

// Login

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    bool access = 1;
}

// Get me

message GetMeUserResponse {
    User user = 1;
}

// Get other user

message GetOtherUserRequest {
    string nickname = 1;
}

message GetOtherUserResponse {
    User user = 1;
}

// Update

message UpdateUserRequest {
    uint32 id = 1;
    User user = 2;
}

message UpdateUserResponse {
    User user = 1;
}

// Delete

message DeleteUserRequest {
    uint32 id = 1;
}

message DeleteUserResponse {
    User user = 1;
}